[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests", "build"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus_client"
dynamic = ["version", "readme"]
description = "Tools for evaluating a CSIP Aus server implementation via a virtual client"
dependencies = [
    "cactus-test-definitions @ git+https://github.com/synergy-au/cactus-test-definitions.git@test/itron-bridges",
    "cactus-schema>=0.0.4",
    "envoy_schema @ git+https://github.com/synergy-au/envoy-schema.git@v0.31.0-storage.0.6.0",
    "rich>=14.1.0,<15",
    "treelib>=1.8.0,<2",
    "aiohttp>=3.11.12,<4",
    "pyyaml>=6.0.2,<7",
    "dataclass-wizard>=0.35.0,<1",
    "pydantic_xml[lxml]>=2.11.7,<3",
    "reportlab>=4.4.1,<5",
    "cryptography",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "coverage",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "types-PyYAML",
    "lxml-stubs",
    "types-reportlab",
]
test = ["assertical", "pytest", "pytest-aiohttp", "freezegun", "cryptography"]

[tool.setuptools.package-data]
"cactus_client" = ["py.typed", "**/*.xsd"]

[tool.setuptools.dynamic]
version = { attr = "cactus_client.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }


[project.scripts]
cactus = "cactus_client.cli.main:cli_entrypoint"
