
[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.bandit]
exclude_dirs = ["tests"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "N"]

[tool.ty.src]
include = ["src"]


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus_client"
dynamic = ["version", "readme"]
description = "Tools for evaluating a CSIP Aus server implementation via a virtual client"
dependencies = [
    "cactus-test-definitions>=1.13.2",
    "cactus-schema>=0.0.11",
    "envoy_schema @ git+https://github.com/synergy-au/envoy-schema.git@v2.1.0-storage.0.9.0",
    "rich>=14.1.0,<15",
    "treelib>=1.8.0,<2",
    "aiohttp>=3.11.12,<4",
    "pyyaml>=6.0.2,<7",
    "dataclass-wizard>=0.35.0,<1",
    "pydantic_xml[lxml]>=2.11.7,<3",
    "reportlab>=4.4.1,<5",
    "apluggy>=1.1.2,<2",
    "cryptography",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "coverage",
    "flake8",
    "flake8-bugbear",
    "ruff",
    "ty",
    "types-PyYAML",
    "lxml-stubs",
    "types-reportlab",
]
test = ["assertical>=0.4.0", "pytest", "pytest-aiohttp", "freezegun", "cryptography"]

[tool.setuptools.package-data]
"cactus_client" = ["py.typed", "**/*.xsd"]

[tool.setuptools.dynamic]
version = { attr = "cactus_client.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }


[project.scripts]
cactus = "cactus_client.cli.main:cli_entrypoint"
